<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_create_circle"
        android:title="@string/action_create_circle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_join_circle"
        android:title="@string/action_join_circle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_switch_circle"
        android:title="@string/action_switch_circle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave_circle"
        android:title="@string/action_leave_circle"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
