<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="joinCircleViewModel"
            type="com.familycircleapp.ui.newuser.JoinCircleViewModel" />

        <variable
            name="createCircleViewModel"
            type="com.familycircleapp.ui.newuser.CreateCircleViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tw_join_circle_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/join_circle_description"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_invite_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:hint="@string/hint_enter_invite_code"
                android:text="@={joinCircleViewModel.inviteCode}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tw_join_circle_description" />

            <TextView
                android:id="@+id/tw_join_circle_description_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/join_circle_description_or"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_invite_code" />

            <Button
                android:id="@+id/btn_create_new_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{joinCircleViewModel.buttonEnabled &amp;&amp; createCircleViewModel.buttonEnabled}"
                android:onClick="@{() -> createCircleViewModel.createCircle()}"
                android:text="@string/btn_create_first_circle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tw_join_circle_description_or" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/btn_join_to_circle"
            style="@style/WizardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:enabled="@{joinCircleViewModel.buttonEnabled &amp;&amp; createCircleViewModel.buttonEnabled}"
            android:onClick="@{() -> joinCircleViewModel.joinCircle()}"
            android:text="@string/btn_join_to_circle" />

        <include
            layout="@layout/part_loader_screen"
            app:visibility="@{joinCircleViewModel.isLoaderScreenVisible || createCircleViewModel.isLoaderScreenVisible ? View.VISIBLE : View.GONE}" />

    </FrameLayout>
</layout>
